# freetar

./: .dockerignore  .env.example  .gitignore  CHORDPRO.md  CLAUDE.md  DOCKER.md  Dockerfile  QUICKSTART.md  README.md  STAGE_VIEW.md  SUPABASE_SETUP.md  TEST.md  TROUBLESHOOTING.md  docker-compose.yml  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  supabase-migration-setlist-settings.sql  supabase-migration-stage-view.sql  supabase-schema.sql
examples/: sample-chordpro-correct.cho  sample-chordpro.cho
freetar/: backend.py  chordpro.py  ug.py  utils.py
freetar-nextjs/: CHANGELOG.md  CLAUDE.md  README.md  next.config.js  package.json
freetar-nextjs/src/app/: globals.css  layout.tsx  page.tsx
freetar-nextjs/src/app/about/: page.tsx
freetar-nextjs/src/app/search/: page.tsx
freetar-nextjs/src/app/tab/: page.tsx
freetar-nextjs/src/components/: BootstrapClient.tsx  ChordDiagram.tsx  Navbar.tsx  SearchResults.tsx  TabDisplay.tsx
freetar-nextjs/src/lib/: ug.ts
freetar-nextjs/src/types/: index.ts
freetar/static/: custom.js  main.css  manifest.json  print.css  scroll.js  sw.js
freetar/templates/: about.html  base.html  error.html  index.html  macros.j2  tab.html
public/: manifest.json
src/app/: globals.css  layout.tsx  page.tsx
src/app/about/: page.tsx
src/app/api/search/: route.ts
src/app/api/setlist-by-token/: route.ts
src/app/api/tab/: route.ts
src/app/api/tab-by-id/: route.ts
src/app/auth/callback/: route.ts
src/app/search/: page.tsx
src/app/setlists/: page.tsx
src/app/setlists/[id]/: page.tsx
src/app/stage/[token]/: page.tsx
src/app/tab/: page.tsx
src/components/: AuthModal.tsx  ChordDiagram.tsx  Navbar.tsx  SearchResults.tsx  TabDisplay.tsx
src/contexts/: AuthContext.tsx
src/hooks/: useFavorites.ts
src/lib/: chordpro.ts  favorites.ts  setlists.ts  supabase.ts  tabs.ts  ug.ts
src/types/: database.ts  index.ts
