[tool.poetry]
name = "freetar"
version = "0.9.0"
description = ""
authors = ["kmille <github@androidloves.me>"]
readme = "README.md"
repository = "https://github.com/kmille/freetar"
homepage = "https://github.com/kmille/freetar"


[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.0"
flask = "^2.2.3"
waitress = "^2.1.2"
flask-minify = "^0.42"


[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
freetar = 'freetar.backend:main'
