[tool.poetry]
name = "freetar"
version = "0.13.0"
description = ""
authors = ["kmille <github@androidloves.me>"]
readme = "README.md"
repository = "https://github.com/kmille/freetar"
homepage = "https://github.com/kmille/freetar"


[tool.poetry.dependencies]
python = "^3.9"
requests = {extras = ["socks"], version = "^2.32.3"}
beautifulsoup4 = "^4.12.0"
flask = "^3.0.30"
waitress = "^3.0.2"
flask-minify = "^0.49"


[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
freetar = 'freetar.backend:main'
